# FrostyEngine

./: Cargo.toml  README.md
FrostyEngine/: Cargo.toml
FrostyEngine/src/: app.rs  color.rs  draw.rs  ecs.rs  input.rs  lib.rs  rect.rs  resource_manager.rs  scene.rs  sprite.rs  time_keep.rs  util.rs
FrostyEngine/src/defaults/: mod.rs  rect.rs
FrostyEngine/src/ecs/: component.rs  component_builder.rs  ecs.rs  entity.rs  meta_data_component.rs  mod.rs
FrostyEngine/src/render/: mod.rs  render_backend.rs  shader.rs  sprite_component.rs  vertex.rs  window.rs
tests/: Cargo.toml
tests/src/: main.rs  moving_box.rs
tests/src/assets/: default_shader.wgsl  triangle_shader.wgsl
