[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "*"
FrostyEngine = {path = "../FrostyEngine"}
uuid = "*"

# for moving assets folder into cwd
anyhow = "*"
fs_extra = "*"
glob = "*"